<resources>
    <string name="app_name">GTT</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Address</string>
    <string name="inbox_string">Order Histroy</string>
    <string name="locateonmap">Select Vendor</string>
    <string name="locateonaddress">Select Address</string>
    <string name="sent_mail_string">Feedback</string>
    <string name="draft_string">About Us</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">Logout</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>


    <string name="order_edit_chooseno">Choose Number</string>
    <string name="order_edit_choosedate">Choose Date</string>
    <string name="order_edit_choosetime">Choose Time</string>

    <string name="country_prompt">Choose a country</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string-array name="maptable">
        <item>Mer</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>


    <string name="title_activity_locate_shop">Select Vendor</string>
    <string name="title_activity_locate_Address">Select Your Location</string>
    <string name="title_activity_locate_address_main">LocateAddressMain</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_showall">Showall</string>


</resources>
