<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/inbox"
            android:checked="false"
            android:name="android:itemTextAppearance"
            android:icon="@drawable/ic_order_histroy"
            android:title="@string/inbox_string" />
       <!-- <item
            android:id="@+id/Address"
            android:checked="false"
            android:name="android:itemTextAppearance"
            android:icon="@drawable/ic_order_histroy"
            android:title="@string/locateonaddress" />
        <item
            android:id="@+id/map"
            android:checked="false"
            android:name="android:itemTextAppearance"
            android:icon="@drawable/ic_order_histroy"
            android:title="@string/locateonmap" />-->
        <item
            android:id="@+id/starred"
            android:checked="false"
            android:icon="@drawable/ic_address"
            android:title="@string/starred_string" />

        <item
            android:id="@+id/sent_mail"
            android:checked="false"
            android:icon="@drawable/ic_feedback"
            android:title="@string/sent_mail_string" />

        <item
            android:id="@+id/drafts"
            android:checked="false"
            android:icon="@drawable/user_profile"
            android:title="@string/draft_string" />


        <item
            android:id="@+id/allmail"
            android:checked="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/all_mail_string" />


    </group>
</menu>